# fart-it

./: CMakeLists.txt  argument_parser.cpp  argument_parser.hpp  fart_config.hpp  fart_refactored.cpp  file_processor.cpp  file_processor.hpp  text_processor.cpp  text_processor.hpp
